--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,6 +25,10 @@
             android:layout_margin="10dp"
             android:src="@drawable/ic_logout"/>
     </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -114,7 +119,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/trek_list"
             android:layout_width="match_parent"
-            android:background="@android:color/black"
+            android:clipToPadding="false"
             android:layout_height="match_parent"/>
+    </LinearLayout>
     </LinearLayout>
 </LinearLayout>
