--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -32,7 +32,7 @@
             android:maxLines="2"
             android:layout_gravity="bottom"
             android:layout_margin="20dp"
-            android:text="Your trip to Kungsleden (Sweden)"
+            android:text="Your trip to Location"
             android:ellipsize="marquee"
             android:textColor="#ffffff"
             android:textSize="25sp" />
@@ -46,7 +46,7 @@
         android:id="@+id/destination"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Club Donatello"
+        android:text="Location Name"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginRight="20dp"
@@ -61,7 +61,7 @@
             android:id="@+id/location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="501, Post street, San Francisco (California),CA 923123"
+            android:text="Details"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginRight="20dp"
@@ -119,7 +119,7 @@
                     android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="21 JUN"
+                    android:text="Demo date"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
                     android:textSize="25sp" />
@@ -146,7 +146,7 @@
                     android:id="@+id/time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="15:00"
+                    android:text="Demo time"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
                     android:textSize="25sp" />
