--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -116,11 +116,20 @@
             android:textColor="@color/colorPrimary"
             android:padding="15dp"
             android:textSize="20sp" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/trek_list"
             android:layout_width="match_parent"
             android:clipToPadding="false"
             android:layout_height="match_parent"/>
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+        </FrameLayout>
     </LinearLayout>
     </LinearLayout>
 </LinearLayout>
